# django_ninja_factoryboy_pipenv

./: .gitignore  LICENSE  Pipfile  README.md  manage.py  pyproject.toml  shortcuts
character_api/: asgi.py  character_api.py  models.py  schemas.py  settings.py  urls.py  wsgi.py
character_api/management/commands/: create_user.py
character_api/migrations/: 0001_initial.py  0002_auto_20211210_0202.py  0003_auto_20211210_0211.py  0004_auto_20211210_0236.py
character_api/tests/: client.py  test_character_api.py
character_api/tests/factories/: character.py  user.py
templates/registration/: login.html
