[tool.poetry]
name = "django-ninja-factoryboy"
version = "0.1.0"
description = ""
authors = []
license = "LICENSE"
readme = "README.md"
packages = [{include = "character_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-ninja = "^1.1.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
